--- a/app/src/main/res/layout/satsanglist.xml
+++ b/app/src/main/res/layout/satsanglist.xml
@@ -1,52 +1,12 @@
-
-
-
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-android:layout_width="match_parent"
-android:layout_height="match_parent">
-
-<!-- Toolbar instead of ActionBar so the drawer can slide on top -->
-<android.support.v7.widget.Toolbar
-  android:id="@+id/toolbar"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
-  android:layout_height="@dimen/abc_action_bar_default_height_material"
-  android:background="?attr/colorPrimary"
-  android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
+  android:layout_height="match_parent">
 
+  <android.support.v7.widget.RecyclerView
+    android:id="@+id/recycler_view"
+    android:scrollbars="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"/>
 
-
-
-    <LinearLayout
-      android:id="@+id/viewB"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:layout_weight="0.2"
-      android:background="@android:color/white"
-      android:orientation="vertical">
-
-      <ListView
-        android:id="@+id/listview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        />
-
-
-    </LinearLayout>
-
-
-
-
-<android.support.design.widget.FloatingActionButton
-  android:id="@+id/next"
-  android:layout_width="wrap_content"
-  android:layout_height="wrap_content"
-  android:layout_margin="16dp"
-  android:clickable="true"
-  android:rotation="180"
-  android:src="@drawable/create_contact"
-  app:layout_anchor="@id/viewB"
-  app:layout_anchorGravity="bottom|right|end" />
-
-</android.support.design.widget.CoordinatorLayout>
-
+</RelativeLayout>
