--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -35,7 +35,16 @@
 
     </style>
 
-    <style name="bottom_block">
+  <style name="block_text_saffron">
+    <item name="android:layout_width">match_parent</item>
+    <item name="android:layout_height">30dp</item>
+    <item name="android:textSize">14sp</item>
+    <item name="android:textColor">@color/white</item>
+    <item name="android:background">@color/safaron</item>
+  </style>
+
+
+  <style name="bottom_block">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">60dp</item>
         <item name="android:background">@color/safaron_light</item>
@@ -144,5 +153,14 @@
     <item name="android:layout_height">wrap_content</item>
     <item name="android:textAppearance">?android:attr/textAppearanceSmall</item>
 
+  </style>
+  <style name="CustomCheckBox">
+    <item name="android:theme">@style/CheckBoxAppTheme</item>
+  </style>
+
+  <style name="CheckBoxAppTheme">
+    <item name="android:colorAccent">@color/accent</item>
+    <item name="android:colorControlNormal">@color/primary</item>
+    <item name="android:colorControlHighlight">@color/primaryDark</item>
   </style>
 </resources>
