--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
     android:id="@+id/mainlayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <!-- Toolbar instead of ActionBar so the drawer can slide on top -->
@@ -24,7 +25,8 @@
     <FrameLayout
       android:id="@+id/content"
       android:layout_width="match_parent"
-      android:layout_height="0dp"
+      android:layout_height="match_parent"
+      android:background="@color/white"
       android:layout_weight="1" />
 
 
