--- a/app/src/main/res/layout/dashboard_satsang.xml
+++ b/app/src/main/res/layout/dashboard_satsang.xml
@@ -4,7 +4,7 @@
   android:layout_width="fill_parent"
   android:layout_height="wrap_content"
   android:layout_gravity="center"
-
+  android:background="@color/white"
   card_view:cardCornerRadius="2dp"
   card_view:contentPadding="5dp">
 
