--- a/app/src/main/res/layout/setpassword.xml
+++ b/app/src/main/res/layout/setpassword.xml
@@ -2,6 +2,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+  android:background="@color/white"
     android:layout_height="match_parent">
 
   <!-- Toolbar instead of ActionBar so the drawer can slide on top -->
