--- a/app/src/main/res/layout/dashboard.xml
+++ b/app/src/main/res/layout/dashboard.xml
@@ -53,13 +53,131 @@
                     android:textStyle="bold" />
             </LinearLayout>
         </android.support.v7.widget.CardView>
+      <android.support.v7.widget.CardView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_margin="5dp"
+        card_view:cardCornerRadius="2dp"
+        card_view:contentPadding="5dp"
+        android:visibility="gone"
+        android:id="@+id/japaminfo">
 
+        <LinearLayout
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_below="@+id/tvTitleHelp"
+          android:orientation="vertical">
+
+          <TextView
+            android:id="@+id/edOverallTitle"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:background="@color/safaron"
+            android:gravity="center_horizontal|center"
+            android:text="@string/lbl_statical_information"
+            android:textColor="@color/white" />
+
+          <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:layout_below="@+id/tvTitleHelp"
+            android:layout_gravity="center_horizontal|center"
+            android:orientation="horizontal">
+
+            <TextView
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:layout_gravity="center_horizontal|center"
+              android:layout_weight="1"
+              android:text="Overall Count:" />
+
+            <TextView
+              android:id="@+id/japam_count_over_all"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:layout_gravity="center_horizontal|center"
+              android:layout_weight="1"
+              android:text="100101001" />
+          </LinearLayout>
+
+          <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:layout_below="@+id/tvTitleHelp"
+            android:layout_gravity="center_horizontal|center"
+            android:orientation="horizontal">
+
+            <TextView
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:layout_gravity="center_horizontal|center"
+              android:layout_weight="1"
+              android:text="Satsang Count:" />
+
+            <TextView
+              android:id="@+id/japam_count_satsang"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:layout_gravity="center_horizontal|center"
+              android:layout_weight="1"
+              android:text="1000" />
+          </LinearLayout>
+
+          <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:layout_below="@+id/tvTitleHelp"
+            android:layout_gravity="center_horizontal|center"
+            android:orientation="horizontal">
+
+            <TextView
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:layout_gravity="center_horizontal|center"
+              android:layout_weight="1"
+              android:text="Your Japam Count:" />
+
+            <TextView
+              android:id="@+id/japam_count"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:layout_gravity="center_horizontal|center"
+              android:layout_weight="1"
+              android:text="500" />
+          </LinearLayout>
+
+          <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:layout_below="@+id/tvTitleHelp"
+            android:layout_gravity="center_horizontal|center"
+            android:orientation="horizontal">
+
+            <TextView
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:layout_gravity="center_horizontal|center"
+              android:layout_weight="1"
+              android:text="Last Updated Date:" />
+
+            <TextView
+              android:id="@+id/japam_last_updated_date"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:layout_gravity="center_horizontal|center"
+              android:layout_weight="1"
+              android:text="10-Sep-2015" />
+          </LinearLayout>
+        </LinearLayout>
+      </android.support.v7.widget.CardView>
         <android.support.v7.widget.CardView
             android:id="@+id/card_view1"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="5dp"
+          android:visibility="gone"
             card_view:cardCornerRadius="2dp"
             card_view:contentPadding="5dp">
 
