--- a/app/src/main/res/layout/satsanglist.xml
+++ b/app/src/main/res/layout/satsanglist.xml
@@ -1,12 +1,39 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
-  android:layout_height="match_parent">
+  android:layout_height="match_parent"
+  android:orientation="vertical">
+
+  <LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+
+    android:visibility="gone"
+    android:orientation="horizontal">
+
+    <Spinner
+      android:layout_width="wrap_content"
+      android:layout_height="match_parent"
+      android:entries="@array/spinnerItems" />
+
+    <android.support.design.widget.TextInputLayout
+      android:id="@+id/layoutSearch"
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content">
+
+      <EditText
+        android:id="@+id/edSearch"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="@string/lbl_search"
+        android:inputType="text" />
+    </android.support.design.widget.TextInputLayout>
+  </LinearLayout>
 
   <android.support.v7.widget.RecyclerView
     android:id="@+id/recycler_view"
-    android:scrollbars="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"/>
+    android:layout_height="match_parent"
+    android:scrollbars="vertical" />
 
-</RelativeLayout>
+</LinearLayout>
