--- a/app/src/main/res/layout/setpassword.xml
+++ b/app/src/main/res/layout/setpassword.xml
@@ -40,7 +40,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
-                    android:inputType="textVisiblePassword"
+                    android:inputType="textPassword"
                     android:hint="@string/lbl_password" />
             </android.support.design.widget.TextInputLayout>
             <android.support.design.widget.TextInputLayout
@@ -53,7 +53,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
-                    android:inputType="textVisiblePassword"
+                    android:inputType="textPassword"
                     android:hint="@string/lbl_confirm_password" />
             </android.support.design.widget.TextInputLayout>
 
