--- a/app/src/main/res/layout/setting.xml
+++ b/app/src/main/res/layout/setting.xml
@@ -15,60 +15,79 @@
       android:orientation="vertical"
       android:padding="5dp">
 
-      <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="60dp"
-        android:gravity="left|center"
-        android:text="Settings"
-        android:textStyle="bold"
-        android:textColor="@color/safaron" />
-      <View
+      <LinearLayout
+        android:id="@+id/llpassword"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@android:color/darker_gray" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+          android:layout_width="fill_parent"
+          android:layout_height="60dp"
+          android:gravity="left|center"
+          android:text="Settings"
+          android:textColor="@color/safaron"
+          android:textStyle="bold" />
+
+        <View
+          android:layout_width="match_parent"
+          android:layout_height="1dp"
+          android:background="@android:color/darker_gray" />
 
 
-      <Button
-        android:layout_width="fill_parent"
-        android:layout_height="60dp"
-        android:gravity="left|center"
-        style="?android:attr/borderlessButtonStyle"
-        android:textAllCaps="false"
-        android:text="Change Password "
-        android:textColor="@color/black" />
+        <Button
+          android:id="@+id/changepassword"
+          style="?android:attr/borderlessButtonStyle"
+          android:layout_width="fill_parent"
+          android:layout_height="60dp"
+          android:gravity="left|center"
+          android:text="Change Password "
+          android:textStyle="normal"
+          android:textAllCaps="false"
+           />
+      </LinearLayout>
 
-      <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="60dp"
-        android:gravity="left|center"
-        android:text="Suscribed Features "
-        android:textStyle="bold"
-        android:textColor="@color/safaron" />
-      <View
+      <LinearLayout
+        android:id="@+id/llfeatures"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@android:color/darker_gray" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+          android:layout_width="fill_parent"
+          android:layout_height="60dp"
+          android:gravity="left|center"
+          android:text="Subscribed Features "
+          android:textColor="@color/safaron"
+          android:textStyle="bold" />
+
+        <View
+          android:layout_width="match_parent"
+          android:layout_height="1dp"
+          android:background="@android:color/darker_gray" />
 
 
-      <CheckBox
-        android:id="@+id/chkSatang"
-        style="@style/CheckBoxAppTheme"
-        android:layout_width="fill_parent"
-        android:layout_height="60dp"
-        android:text="@string/lbl_unscribe_satsang"
-        android:textColor="@color/black" />
+        <CheckBox
+          android:id="@+id/chkSatang"
+          style="@style/CheckBoxAppTheme"
+          android:layout_width="fill_parent"
+          android:layout_height="60dp"
+          android:checked="false"
+          android:clickable="false"
+          android:text="@string/lbl_unscribe_satsang"
+          android:textColor="@color/black" />
 
 
+        <CheckBox
+          android:id="@+id/chkJapam"
+          style="@style/CheckBoxAppTheme"
+          android:layout_width="fill_parent"
+          android:layout_height="60dp"
+          android:text="@string/lbl_unscribe_japam"
+          android:clickable="false"
+          android:textColor="@color/black" />
 
-      <CheckBox
-        android:id="@+id/chkJapam"
-        style="@style/CheckBoxAppTheme"
-        android:layout_width="fill_parent"
-        android:layout_height="60dp"
-        android:text="@string/lbl_unscribe_japam"
-        android:textColor="@color/black"/>
-
-
+      </LinearLayout>
 
     </LinearLayout>
   </ScrollView>
