--- a/app/src/main/res/menu/settting_menu.xml
+++ b/app/src/main/res/menu/settting_menu.xml
@@ -1,49 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+  xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <!--ADD_NEW(0),
-    SAVE(1),
-    EDIT(2),
-    DELETE(3),
-    RADIO(4),
-    FEEDBACK(5);-->
-    <item
-        android:id="@+id/general"
-        android:title="@string/action_general"
-        android:visible="false"
-        app:showAsAction="always" />
-    <item
-        android:id="@+id/addnew"
-        android:icon="@drawable/ic_add"
-        android:visible="false"
-        app:showAsAction="always" />
-    <item
-        android:id="@+id/save"
-        android:icon="@drawable/ic_save"
-        android:visible="false"
-        app:showAsAction="always" />
-    <item
-        android:id="@+id/edit"
-        android:icon="@drawable/ic_new"
-        android:visible="false"
-        app:showAsAction="always" />
-    <item
-        android:id="@+id/delete"
-        android:icon="@drawable/ic_delete"
-        android:title="@string/action_save"
-        android:visible="false"
-        app:showAsAction="always" />
-    <item
-        android:id="@+id/radio"
-        android:icon="@drawable/ic_play"
-        android:title="@string/lbl_online_radio"
-        android:visible="false"
-        app:showAsAction="always" />
+  <!--ADD_NEW(0),
+  SAVE(1),
+  EDIT(2),
+  DELETE(3),
+  RADIO(4),
+  FEEDBACK(5);-->
+  <item
+    android:id="@+id/general"
+    android:title="@string/action_general"
+    android:visible="false"
+    app:showAsAction="always" />
+  <item
+    android:id="@+id/addnew"
+    android:icon="@drawable/ic_add"
+    android:visible="false"
+    app:showAsAction="always" />
+  <item
+    android:id="@+id/save"
+    android:icon="@drawable/ic_save"
+    android:visible="false"
+    app:showAsAction="always" />
+  <item
+    android:id="@+id/edit"
+    android:icon="@drawable/ic_new"
+    android:visible="false"
+    app:showAsAction="always" />
+  <item
+    android:id="@+id/delete"
+    android:icon="@drawable/ic_delete"
+    android:title="@string/action_save"
+    android:visible="false"
+    app:showAsAction="always" />
+  <item
+    android:id="@+id/radio"
+    android:icon="@drawable/ic_play"
+    android:title="@string/lbl_online_radio"
+    android:visible="false"
+    app:showAsAction="always" />
 
-    <item
-        android:id="@+id/feedback"
-        android:title="@string/lbl_feedback"
-        />
+  <item
+    android:id="@+id/feedback"
+    android:title="@string/lbl_feedback" />
 
 </menu>
