--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,37 +12,57 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical">
-
-    <!-- Toolbar instead of ActionBar so the drawer can slide on top -->
-    <android.support.v7.widget.Toolbar
-      android:id="@+id/toolbar"
+    <android.support.design.widget.AppBarLayout
+      android:id="@+id/appbar"
       android:layout_width="match_parent"
-      android:layout_height="@dimen/abc_action_bar_default_height_material"
-      android:background="?attr/colorPrimary"
-      android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
+      android:layout_height="wrap_content"
+      android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+      <!-- Toolbar instead of ActionBar so the drawer can slide on top -->
+      <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/abc_action_bar_default_height_material"
+        android:background="?attr/colorPrimary"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
+    </android.support.design.widget.AppBarLayout>
 
     <!-- Real content goes here -->
     <FrameLayout
       android:id="@+id/content"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      android:background="@color/white"
-      android:layout_weight="1" />
+      android:layout_weight="1"
+      android:background="@color/white">
+
+
+    </FrameLayout>
 
 
   </LinearLayout>
 
   <!-- The navigation drawer -->
+  <!--  <android.support.design.widget.NavigationView
+      android:id="@+id/navigation"
+      android:layout_width="wrap_content"
+      android:layout_height="match_parent"
+      android:layout_gravity="start"
+      android:background="@color/ternary"
+      app:headerLayout="@layout/drawer_header"
+      app:itemIconTint="@color/drawer_item_text"
+      app:itemTextColor="@color/drawer_item_text"
+      app:menu="@menu/drawer" />-->
+
   <android.support.design.widget.NavigationView
     android:id="@+id/navigation"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:layout_gravity="start"
+    android:fitsSystemWindows="true"
     android:background="@color/ternary"
     app:headerLayout="@layout/drawer_header"
     app:itemIconTint="@color/drawer_item_text"
     app:itemTextColor="@color/drawer_item_text"
     app:menu="@menu/drawer" />
-
 
 </android.support.v4.widget.DrawerLayout>
