Changes related to Dec 12 2015.

--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -28,7 +28,7 @@
           android:layout_height="wrap_content"
           android:ems="10"
           android:hint="@string/lbl_help_email"
-
+          android:text="krudayakumar@gmail.com"
           android:inputType="textEmailAddress" />
       </android.support.design.widget.TextInputLayout>
 
