--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -2,17 +2,77 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
   <!-- group with single selected item so only one item is highlighted in the nav menu -->
+  <group
+    android:id="@+id/about_peetham_acharay"
+    android:checkableBehavior="single"
+    android:title="@string/lbl_about">
+    <item
+      android:id="@+id/about_peetham"
+      android:icon="@drawable/ic_japam"
+      android:title="@string/lbl_about_peetham" />
+    <item
+      android:id="@+id/about_acharays"
+      android:icon="@drawable/ic_pooja"
+      android:title="@string/lbl_about_acharayas" />
+  </group>
+
+  <group
+    android:id="@+id/others"
+    android:checkableBehavior="single">
+    <item
+      android:id="@+id/books"
+      android:icon="@drawable/ic_books"
+      android:title="@string/lbl_devithin_kural" />
+    <item
+      android:id="@+id/gallery"
+      android:icon="@drawable/ic_gallery"
+      android:title="@string/lbl_gallery" />
+    <item
+      android:id="@+id/videos"
+      android:icon="@drawable/ic_videos"
+      android:title="@string/lbl_videos" />
+    <item
+      android:id="@+id/radio"
+      android:icon="@drawable/ic_radio"
+      android:title="@string/lbl_online_radio"
+      android:visible="true"/>
+  </group>
+  <group
+    android:id="@+id/about_section"
+    android:checkableBehavior="single">
+    <item
+      android:id="@+id/feedback"
+      android:icon="@drawable/ic_feedback"
+      android:title="@string/lbl_feedback" />
+    <item
+      android:id="@+id/aboutus"
+      android:icon="@drawable/ic_aboutus"
+      android:title="@string/lbl_about_us" />
+
+  </group>
+
+
+
+  <item
+    android:id="@+id/signinfeatures"
+    android:title="@string/lbl_activities"
+    android:visible="false"
+    android:checkableBehavior="single">
   <item
     android:id="@+id/signin"
+    android:visible="false"
     android:icon="@drawable/ic_login"
     android:title="@string/lbl_signin" />
   <item
     android:id="@+id/signout"
+    android:visible="false"
     android:icon="@drawable/ic_logout"
     android:title="@string/lbl_signout" />
+  </item>
   <item
     android:id="@+id/features"
     android:title="@string/lbl_activities"
+    android:visible="false"
     android:checkableBehavior="single">
     <menu>
     <item
@@ -29,40 +89,8 @@
       android:title="@string/lbl_sahasra_gayathri_counter" />
     </menu>
   </item>
-  <group
-    android:id="@+id/others"
-    android:checkableBehavior="single">
 
-  <item
-    android:id="@+id/books"
-    android:icon="@drawable/ic_books"
-    android:title="@string/lbl_books" />
-    <item
-      android:id="@+id/gallery"
-      android:icon="@drawable/ic_gallery"
-      android:title="@string/lbl_gallery" />
-    <item
-      android:id="@+id/videos"
-      android:icon="@drawable/ic_videos"
-      android:title="@string/lbl_videos" />
-    <item
-      android:id="@+id/radio"
-      android:icon="@drawable/ic_radio"
-      android:title="@string/lbl_online_radio"
-      android:visible="true"/>
-  </group>
-  <group
-    android:id="@+id/miscellaneous"
-    android:checkableBehavior="single">
-    <item
-      android:id="@+id/setting"
-      android:icon="@drawable/ic_settings"
-      android:title="@string/lbl_settings" />
 
-    <item
-      android:id="@+id/about"
-      android:title="@string/lbl_about" />
-  </group>
 
 
 
