--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,6 +20,11 @@
     <item name="android:layout_height">70dp</item>
   </style>
 
+  <style name="general_dashboard_pading">
+    <item name="android:layout_width">200dp</item>
+    <item name="android:layout_height">200dp</item>
+  </style>
+
   <style name="top_block">
     <item name="android:layout_width">match_parent</item>
     <item name="android:layout_height">150dp</item>
