Renaming the App name and moving the com.kanchi.periyava folder

--- a/app/src/main/res/layout/simple_dashboard.xml
+++ b/app/src/main/res/layout/simple_dashboard.xml
@@ -17,7 +17,7 @@
       android:orientation="vertical"
       android:padding="30dp">
 
-      <com.mahaperivaya.Component.CircularImageView
+      <com.kanchi.periyava.Component.CircularImageView
         android:id="@+id/userimage"
         style="@style/general_dashboard_pading"
         android:src="@drawable/periyava" />
