--- a/app/src/main/res/layout/splash.xml
+++ b/app/src/main/res/layout/splash.xml
@@ -5,7 +5,7 @@
     android:layout_gravity="center_horizontal"
     android:background="@color/safaron"
     android:orientation="vertical"
-    tools:context=".MainActivity$PlaceholderFragment">
+    >
 
 <LinearLayout
     android:layout_width="match_parent"
@@ -13,7 +13,7 @@
     android:gravity="center_horizontal|center"
 
     android:orientation="vertical">
-      <com.mahaperivaya.component.CircularImageView
+      <com.kanchi.periyava.component.CircularImageView
         android:id="@+id/circular_image_view"
         android:layout_width="300dp"
         android:layout_height="300dp"
