Renaming the App name and moving the com.kanchi.periyava folder

--- a/app/src/main/res/drawable-hdpi/rounded_rect_keep_clam.xml
+++ b/app/src/main/res/drawable-hdpi/rounded_rect_keep_clam.xml
@@ -9,7 +9,7 @@
         android:topLeftRadius="20dp"
         android:topRightRadius="20dp" />
 
-    <solid android:color="@color/safaron_light" />
+  <solid android:color="@color/safaron" />
 
     <stroke
         android:width="0.5dip"
