--- a/app/src/main/res/layout/simple_dashboard.xml
+++ b/app/src/main/res/layout/simple_dashboard.xml
@@ -1,60 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-  android:layout_width="wrap_content"
-  android:layout_height="wrap_content">
-  <LinearLayout
-    android:id="@+id/errImage"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+  android:id="@+id/errImage"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+  android:gravity="center"
+  android:orientation="vertical">
+
+
+  <ImageView
+    android:layout_width="100dp"
+    android:layout_height="120dp"
+    android:layout_gravity="center"
+    android:layout_marginTop="10dp"
+    android:background="@drawable/kamakshi_devi" />
+
+
+  <ImageView
+    android:layout_width="320dp"
+    android:layout_height="210dp"
+    android:layout_gravity="center"
+    android:layout_marginTop="10dp"
+    android:background="@drawable/three_acharyas" />
+
+  <TextView
+    android:id="@+id/section_label"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center_vertical|center_horizontal"
+    android:layout_marginTop="20dp"
     android:gravity="center"
-    android:orientation="vertical">
-
-    <LinearLayout
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-
-      android:gravity="center"
-      android:orientation="vertical"
-      android:padding="30dp">
-
-      <com.kanchi.periyava.Component.CircularImageView
-        android:id="@+id/userimage"
-        style="@style/general_dashboard_pading"
-        android:src="@drawable/periyava" />
-
-      <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="KEEP\nCALM"
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textSize="24sp"
-        android:textStyle="bold" />
-
-      <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="AND"
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textSize="12sp" />
-
-      <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="Read \n Deivathin Kural"
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textSize="24sp"
-        android:textStyle="bold" />
-    </LinearLayout>
+    android:text="@string/lbl_hara_hara"
+    android:textAppearance="?android:attr/textAppearanceSmall"
+    android:textColor="@color/safaron" />
 
 
+</LinearLayout>
 
-
-  </LinearLayout>
-
-</FrameLayout>
