--- a/app/src/main/res/layout/help_feedback.xml
+++ b/app/src/main/res/layout/help_feedback.xml
@@ -45,6 +45,7 @@
         android:id="@+id/llfeatures"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:visibility="gone"
         android:orientation="vertical">
 
         <TextView
