--- a/app/src/main/res/layout/radio.xml
+++ b/app/src/main/res/layout/radio.xml
@@ -1,26 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:background="@color/white"
-    android:paddingTop="@dimen/activity_vertical_margin">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+  android:gravity="center"
+
+  android:orientation="vertical">
+
+  <!-- <include layout="@layout/simple_dashboard" />-->
+
   <LinearLayout
     android:id="@+id/errImage"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:gravity="center"
-    android:orientation="vertical">
-    <include layout="@layout/simple_dashboard"/>
-    <Button
-      android:id="@+id/btnRadio"
-      android:layout_width="30dp"
-      android:layout_height="30dp"
-      style="?android:attr/borderlessButtonStyle"
-      android:clickable="true"
-      android:background="@drawable/ic_radio_play"/>
+    android:padding="20dp"
+    android:orientation="horizontal">
+
+    <LinearLayout
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+
+      android:padding="10dp"
+      android:weightSum="2"
+      android:background="@drawable/rounded_rect_keep_clam"
+      android:orientation="horizontal">
+
+      <com.kanchi.periyava.Component.CircularImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_gravity="left"
+        android:src="@drawable/periyava" />
+
+      <ImageButton
+        android:id="@+id/btnRadio"
+        style="?android:attr/borderlessButtonStyle"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_gravity="right"
+        android:background="@drawable/ic_play"
+        android:clickable="true" />
+    </LinearLayout>
   </LinearLayout>
-</RelativeLayout>
+</LinearLayout>
+
