--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -44,7 +44,7 @@
     <item
       android:id="@+id/feedback"
       android:icon="@drawable/ic_feedback"
-      android:title="@string/lbl_help_feedback" />
+      android:title="@string/lbl_feedback" />
     <item
       android:id="@+id/aboutus"
       android:icon="@drawable/ic_aboutus"
@@ -52,6 +52,7 @@
     <item
       android:id="@+id/exit"
       android:icon="@drawable/ic_logout"
+      android:visible="false"
       android:title="@string/lbl_exit" />
 
   </group>
