--- a/app/src/main/res/layout/radio.xml
+++ b/app/src/main/res/layout/radio.xml
@@ -1,45 +1,129 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  android:gravity="center"
+
 
   android:orientation="vertical">
 
   <!-- <include layout="@layout/simple_dashboard" />-->
-
-  <LinearLayout
-    android:id="@+id/errImage"
+  <ScrollView
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:gravity="center"
-    android:padding="20dp"
-    android:orientation="horizontal">
+    android:layout_height="match_parent">
+
 
     <LinearLayout
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
+      android:id="@+id/errImage"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:gravity="center"
+      android:orientation="vertical">
 
-      android:padding="10dp"
-      android:weightSum="2"
-      android:background="@drawable/rounded_rect_keep_clam"
-      android:orientation="horizontal">
+      <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
 
-      <com.kanchi.periyava.Component.CircularImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_gravity="left"
-        android:src="@drawable/periyava" />
+        android:orientation="horizontal"
+        android:weightSum="2">
 
-      <ImageButton
-        android:id="@+id/btnRadio"
-        style="?android:attr/borderlessButtonStyle"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_gravity="right"
-        android:background="@drawable/ic_play"
-        android:clickable="true" />
+        <!--<com.kanchi.periyava.Component.CircularImageView
+          android:layout_width="100dp"
+          android:layout_height="100dp"
+          android:layout_gravity="center"
+          android:src="@drawable/perivaya_sitting" />-->
+        <LinearLayout
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_gravity="bottom"
+          android:orientation="horizontal">
+
+          <com.kanchi.periyava.Component.CircularImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center"
+
+            android:src="@drawable/periyava" />
+
+          <TextView
+            style="@style/saffron_small_text"
+            android:layout_width="match_parent"
+
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/lbl_periyava_pootri"
+            android:textColor="@color/safaron"
+            android:textStyle="bold" />
+        </LinearLayout>
+      </LinearLayout>
+
+      <View
+        android:id="@+id/SplitLine_hor1"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="?android:attr/listDivider" />
+
+
+      <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_marginTop="10dp"
+        android:orientation="vertical"
+
+        android:weightSum="2">
+
+        <ImageButton
+          android:id="@+id/btnRadio"
+          style="?android:attr/borderlessButtonStyle"
+          android:layout_width="60dp"
+          android:layout_height="60dp"
+          android:layout_gravity="center"
+          android:background="@drawable/ic_play"
+          android:clickable="true" />
+
+        <TextView
+          android:id="@+id/playlist"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_alignParentRight="true"
+          android:layout_marginBottom="10dp"
+          android:layout_marginTop="10dp"
+          android:ellipsize="marquee"
+          android:fadingEdge="horizontal"
+          android:lines="1"
+          android:marqueeRepeatLimit="marquee_forever"
+          android:scrollHorizontally="true"
+          android:singleLine="true"
+          android:textColor="@color/safaron" />
+      </LinearLayout>
+
+
+      <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp">
+
+        <TextView
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_gravity="center_vertical"
+          android:layout_marginBottom="10dp"
+          android:text="Schedule List"
+          android:textColor="@color/safaron"
+          android:textStyle="bold" />
+
+        <TextView
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_gravity="center_vertical"
+          android:text="@string/lbl_radio_schedule"
+          android:textColor="@color/black" />
+      </LinearLayout>
+
+
     </LinearLayout>
-  </LinearLayout>
-</LinearLayout>
+  </ScrollView>
+</RelativeLayout>
 
