--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <resources>
   <dimen name="activity_horizontal_margin">10dp</dimen>
   <dimen name="activity_vertical_margin">10dp</dimen>
+  <dimen name="text_margin">16dp</dimen>
 </resources>
