--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -112,6 +112,22 @@
     <item name="android:textAppearance">?android:attr/textAppearanceSmall</item>
   </style>
 
+  <style name="saffron_small_text">
+    <item name="android:layout_width">match_parent</item>
+    <item name="android:layout_height">wrap_content</item>
+    <item name="android:padding">10dp</item>
+    <item name="android:textColor">@color/safaron</item>
+    <item name="android:textAppearance">?android:attr/textAppearanceSmall</item>
+  </style>
+
+  <style name="saffron_medium_text">
+    <item name="android:layout_width">match_parent</item>
+    <item name="android:layout_height">wrap_content</item>
+    <item name="android:padding">10dp</item>
+    <item name="android:textColor">@color/safaron</item>
+    <item name="android:textAppearance">?android:attr/textAppearanceMedium</item>
+  </style>
+
   <style name="white_small_text">
     <item name="android:layout_width">match_parent</item>
     <item name="android:layout_height">wrap_content</item>
