--- a/app/src/main/res/layout/list_group.xml
+++ b/app/src/main/res/layout/list_group.xml
@@ -8,6 +8,7 @@
     android:id="@+id/listTitle"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
+    android:textAppearance="?android:attr/textAppearanceMedium"
     android:paddingBottom="10dp"
     android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
     android:paddingTop="10dp"
