--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -53,7 +53,7 @@
     <item
       android:id="@+id/exit"
       android:icon="@drawable/ic_logout"
-      android:visible="false"
+      android:visible="true"
       android:title="@string/lbl_exit" />
 
   </group>
